--- a/src/components/TimeLines.css
+++ b/src/components/TimeLines.css
@@ -1,4 +1,11 @@
 .createAtStyle{
     color: rgb(255, 255, 255);
     font-size: 0.75rem;
+    
+}
+.timelineGrid{
+    height: 750px;
+}
+.timelineevent{
+    margin-left: 500px !important;
 }
