--- a/src/components/Hero.css
+++ b/src/components/Hero.css
@@ -2,7 +2,6 @@
     object-fit: cover;
     width: 100%;
     height: 100%;
-
     z-index: -1;
     margin-top: -80px;
    
@@ -51,3 +50,9 @@
     margin: 0 1rem;
     position: relative;
 }
+
+@media only screen and (max-width: 600px) {
+    .hero-imagedcontainer{
+        width: max-content;
+    }
+  }
